fix(ProductCard): adjust price font size and button styling for better visibility style(grid): modify grid layout for improved responsiveness and spacing

--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -17,10 +17,12 @@ body {
 
 
 
+
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  row-gap: 20px;
+  column-gap: 30px;
   /* Adjust the gap between columns as needed */
 }
 
